Agregado ajax, agregado campo hidden al form y aun no funciona el update

--- a/src/Acme/StoreBundle/Resources/config/routing.yml
+++ b/src/Acme/StoreBundle/Resources/config/routing.yml
@@ -1,6 +1,9 @@
 acme_store_homepage:
     path:     /
     defaults: { _controller: AcmeStoreBundle:Default:index }
-acme_store_insecion:
+acme_store_insercion:
     path:     /insercion
     defaults: { _controller: AcmeStoreBundle:Default:insercion }
+acme_store_update:
+    path:     /insercion/update/{id}
+    defaults: { _controller: AcmeStoreBundle:Default:update }
